Fixed the spacing for Leaderboard section

--- a/src/components/Leaders/Leaders.module.css
+++ b/src/components/Leaders/Leaders.module.css
@@ -3,3 +3,9 @@
     flex-direction: column;
     gap: 8px;
 }
+
+@media(max-width: 1090px){
+    .container{
+        margin-top: 16px;
+    }
+}
